<TableListItem/> - fix width/align not working (#6271)

--- a/src/TableListItem/TableListItem.st.css
+++ b/src/TableListItem/TableListItem.st.css
@@ -62,6 +62,7 @@
 .optionsContainer {
   display: grid;
   width: 100%;
+  align-items: center;
 }
 
 .align {
